--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inflearn-nextjs",
+  "name": "learn-nextjs-with-pages-router",
   "version": "0.1.0",
   "private": true,
   "scripts": {
